--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Vue CI Pipeline
+name: Vue CI/CD Pipeline
 
 on:
   push:
@@ -17,13 +17,13 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 18
+          node-version: 20
 
       - name: Install Dependencies
         run: npm install
 
       - name: Run Tests
-        run: npm run test -- --run
+        run: npm run test
 
       - name: Build Project
         run: npm run build
